--- a/Draw/Controller/Feed/Hot/RankFirstCell.xib
+++ b/Draw/Controller/Feed/Hot/RankFirstCell.xib
@@ -43,10 +43,10 @@
 							<object class="IBUIView" id="653500881">
 								<reference key="NSNextResponder" ref="724429016"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{320, 200}</string>
+								<string key="NSFrame">{{0, -100}, {320, 337}}</string>
 								<reference key="NSSuperview" ref="724429016"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="459716242"/>
+								<reference key="NSNextKeyView" ref="443151382"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -54,16 +54,16 @@
 										<int key="NSID">2</int>
 									</object>
 								</object>
-								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIClipsSubviews">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<object class="IBUILabel" id="443151382">
 								<reference key="NSNextResponder" ref="724429016"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 130}, {104, 21}}</string>
+								<string key="NSFrame">{{20, 100}, {104, 21}}</string>
 								<reference key="NSSuperview" ref="724429016"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="459716242"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -95,10 +95,10 @@
 							<object class="IBUILabel" id="459716242">
 								<reference key="NSNextResponder" ref="724429016"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 165}, {142, 21}}</string>
+								<string key="NSFrame">{{20, 130}, {142, 21}}</string>
 								<reference key="NSSuperview" ref="724429016"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="443151382"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -122,7 +122,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 199}</string>
+						<string key="NSFrameSize">{320, 136}</string>
 						<reference key="NSSuperview" ref="790461990"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="653500881"/>
@@ -137,10 +137,11 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 200}</string>
+				<string key="NSFrameSize">{320, 137}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="724429016"/>
+				<bool key="IBUIClipsSubviews">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="724429016"/>
 			</object>
